# cmaketest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CMakeListsCompileDemo.txt  CMakeListsCompileType.cmake  CMakeListsLanguage.cmake  CMakeListsLinker.cmake  CMakeListsTest2.cmake  Makefile  calldynamic.c  calldynamicbydllopen.c  callstatic.c  callstatic.cpp  cmake_install.cmake  dynamic.c  dynamic.cmake  dynamic.h  execute.c  execute.cmake  importstatictest.cpp  importstatictest.h  main.c  otherimport.cmake  static.c  static.cmake  static.h  staticimport1.h
jni/: myjni.cpp  myjni.h  other.cpp
jni/info/: Contacts.cpp  Contacts.h  myinfo.cpp  myinfo.h
lib/: libmydynamic.so.1  libmydynamic.so.1.2  static.c.i64
otheheadfile/cn/qssq666/: other.h
